# hubed-audio-learn

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: learning-app-frontend-discussion.md  review-2026-05-24.md  smoke-test.html  smoke-test.md
docs/superpowers/plans/: 2026-05-24-phase1-mvp.md  2026-05-28-single-explainer-oss.md
docs/superpowers/specs/: 2026-05-23-hubed-audio-learn-design.html  2026-05-23-hubed-audio-learn-design.md
src/hubed_audio_learn/: cli.py  config.py  logging_utils.py
src/hubed_audio_learn/pipeline/: html_render.py  outline.py  package.py  research.py  script.py  tts.py
src/hubed_audio_learn/prompts/: outline_system.txt  research_system.txt  script_system.txt
src/hubed_audio_learn/providers/llm/: __init__.py  base.py  claude.py
src/hubed_audio_learn/providers/tts/: __init__.py  base.py  gemini.py
src/hubed_audio_learn/schemas/: __init__.py  outline.py  research.py  script.py  timing.py
src/hubed_audio_learn/templates/html/: player.html.j2
tests/: conftest.py  test_claude_provider.py  test_cli.py  test_config.py  test_gemini_provider.py  test_html_render.py  test_outline.py  test_package.py  test_research.py  test_schemas.py  test_script.py  test_tts_dispatch.py
tests/fixtures/: sample_outline.json  sample_research.json  sample_script.json  sample_timing.json
